--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-:root,html,body{
+:root,
+html,
+body {
   height: 100%;
   width: 100%;
+  background-color: #0a0b0f;
 }
 @layer base {
   :root {
